--- a/index.html
+++ b/index.html
@@ -1,25 +1,16 @@
-html {
-  height: 100%;
-  width: 100%;
-}
+<!DOCTYPE html>
+<html>
 
-h1 {
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: auto;
-  font-size: 5em;
-  animation: text-color-change 3s infinite;
-}
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>replit</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
 
-@keyframes text-color-change {
-  0% {
-    color: yellow;
-  }
-  50% {
-    color: green;
-  }
-  100% {
-    color: yellow;
-  }
-}
+<body>
+  <h1>Adrian Chin</h1>
+  <script src="script.js"></script>
+</body>
+
+</html>
