--- a/index.html
+++ b/index.html
@@ -4,12 +4,23 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>My Website</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  <h1>Adrian Chin</h1>
+  <div class="tabs">
+    <span class="tab">About</span>
+    <span class="tab">Miscellaneous</span>
+    <span class="tab">What This Page Can Do</span>
+    <span class="search-tab">Search</span>
+  </div>
+
+  <div class="content">
+    <h1>Adrian Chin</h1>
+    <img src="https://www.humanesociety.org/sites/default/files/styles/2000x850/public/2019/03/rabbit-475261_0.jpg?h=c855054e&itok=8wBMy7-t" alt="Rabbit Image" class="rabbit-image">
+  </div>
+
   <script src="script.js"></script>
 </body>
 
