--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--bootstrapmade-->
 <!DOCTYPE html>
 <html>
 
@@ -10,8 +11,8 @@
 
 <body>
   <div class="tabs">
-    <span class="tab">About</span>
-    <span class="tab">Miscellaneous</span>
+     <li><a href="about.html">About</a></li> 
+    <a href="https://docs.google.com/spreadsheets/d/1Wp5_DnysB0em2-xaRdMEM_xOPT2kn9RWG0b4aBBx9E4/edit?pli=1#gid=1824411883"><span class="tab">Miscellaneous</span></a>
     <span class="tab">What This Page Can Do</span>
     <span class="search-tab">Search</span>
   </div>
